--- a/GraphicsAssignment4/Lab 4/mouse.html
+++ b/GraphicsAssignment4/Lab 4/mouse.html
@@ -53,7 +53,7 @@
 
         }
         //filling sphere
-        // ctx.lineTo(this.centerX, this.centerY);
+        ctx.lineTo(this.centerX, this.centerY);
         ctx.fillStyle = "rgb(100, 248, 82)";
         ctx.strokeStyle = "rgb(255, 0, 255)";
         ctx.fill();
