--- a/GraphicsAssignment4/Lab 4/mouse.html
+++ b/GraphicsAssignment4/Lab 4/mouse.html
@@ -132,7 +132,8 @@
           ball[i].direction = ball[i].direction * -1;
         }
       }//end of for loop
-      window.requestAnimationFrame(repeatme);
+      window.requestAnimationFrame(repeatme);//calls a specific function to update animation before the next repaint in this case, repeatme
+
 
     }//end of repeatme
     
