--- a/GraphicsAssignment1&2/canvas/canvasBlank.html
+++ b/GraphicsAssignment1&2/canvas/canvasBlank.html
@@ -7,6 +7,7 @@
   </style>
 </head>
 <body>
+  <p>Fionn Browne</p>
   <canvas id="canvasOne" width="2530" height="1300" style="border:4px solid #000000;"></canvas>
 
   <script type="text/javascript">
@@ -103,6 +104,7 @@
           ctx.stroke();
       }
     }
+    //hardcode
     packman1 = new Packman(400,850,40,true);
     ctx.beginPath();
     ctx.arc(400, 830, 10, 0, 2 * Math.PI, false);
